makes a quick fix to the revisions to set them to overflow scroll instead of them going all over the page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,3 +65,8 @@
   font-size: 70px;
   font-weight:400;
  }
+
+ .scroll-flow{
+  overflow:scroll;
+  height:250px;
+ }
